Overflow fixing

--- a/src/scss/_contacts.scss
+++ b/src/scss/_contacts.scss
@@ -76,12 +76,13 @@
       display: block;
       margin-bottom: 25px;
     }
-
-    .contacts__company-name {
+    
+    .contacts__requisite {
       font-size: 17px;
       line-height: 130%;
       color: #333333;
       display: block;
+      margin-bottom: 25px;
     }
 
     .contacts__form-inner {
